--- a/output/stage.bluebirds.com/html/qa-tests.html
+++ b/output/stage.bluebirds.com/html/qa-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QA Tests - Trucking Fuel Cards, Fleet Gas Cards &amp; Fleet Card Management</title>
+    <title>QA Tests - Bluebirds</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         /* Inline CSS for better GitHub Pages compatibility */
@@ -561,12 +561,12 @@ body {
                 <i class="fas fa-home"></i> All Reports
             </a>
             <div class="breadcrumb">
-                <span class="breadcrumb-item">Trucking Fuel Cards, Fleet Gas Cards &amp; Fleet Card Management</span>
+                <span class="breadcrumb-item">Bluebirds</span>
             </div>
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Trucking Fuel Cards, Fleet Gas Cards &amp; Fleet Card Management Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Bluebirds Analysis</h1>
             <p>Comprehensive QA test suite with automated browser testing scenarios</p>
         </div>
 
