Add automatic main index.html updating functionality
- Manually updated main index.html with cards for all existing domains (goodbill.com, stage.bluebirds.com, www.atob.com)
- Added _update_main_index() method to HTMLGenerator class
- Automatically adds/updates domain cards in main index.html after HTML generation
- Includes smart domain description generation based on domain names
- Supports both adding new domains and updating existing ones
- Shows clear console messages when updating main index

--- a/index.html
+++ b/index.html
@@ -165,6 +165,32 @@
                     <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
                 </div>
             </a>
+
+                        <a href="output/goodbill.com/html/index.html" class="domain-card">
+                <h3><i class="fas fa-globe"></i> goodbill.com</h3>
+                <p>Healthcare billing optimization service - hospital bill negotiations and savings analysis</p>
+                <div class="quick-links">
+                    <span class="link-item"><i class="fas fa-tachometer-alt"></i> Dashboard</span>
+                    <span class="link-item"><i class="fas fa-universal-access"></i> Accessibility</span>
+                    <span class="link-item"><i class="fas fa-search"></i> SEO Analysis</span>
+                    <span class="link-item"><i class="fas fa-tasks"></i> QA Tests</span>
+                    <span class="link-item"><i class="fas fa-user-check"></i> UX Analysis</span>
+                    <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
+                </div>
+            </a>
+
+            <a href="output/stage.bluebirds.com/html/index.html" class="domain-card">
+                <h3><i class="fas fa-globe"></i> stage.bluebirds.com</h3>
+                <p>Staging environment analysis - development website testing and validation</p>
+                <div class="quick-links">
+                    <span class="link-item"><i class="fas fa-tachometer-alt"></i> Dashboard</span>
+                    <span class="link-item"><i class="fas fa-universal-access"></i> Accessibility</span>
+                    <span class="link-item"><i class="fas fa-search"></i> SEO Analysis</span>
+                    <span class="link-item"><i class="fas fa-tasks"></i> QA Tests</span>
+                    <span class="link-item"><i class="fas fa-user-check"></i> UX Analysis</span>
+                    <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
+                </div>
+            </a>
         </div>
     </div>
 
