Add missing www.servicenow.com card to main index.html
- Added ServiceNow domain card with enterprise cloud platform description
- Now all 4 analyzed domains are included in main landing page

--- a/index.html
+++ b/index.html
@@ -191,6 +191,19 @@
                     <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
                 </div>
             </a>
+
+            <a href="output/www.servicenow.com/html/index.html" class="domain-card">
+                <h3><i class="fas fa-globe"></i> www.servicenow.com</h3>
+                <p>Enterprise cloud platform - digital workflow solutions and IT service management</p>
+                <div class="quick-links">
+                    <span class="link-item"><i class="fas fa-tachometer-alt"></i> Dashboard</span>
+                    <span class="link-item"><i class="fas fa-universal-access"></i> Accessibility</span>
+                    <span class="link-item"><i class="fas fa-search"></i> SEO Analysis</span>
+                    <span class="link-item"><i class="fas fa-tasks"></i> QA Tests</span>
+                    <span class="link-item"><i class="fas fa-user-check"></i> UX Analysis</span>
+                    <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
+                </div>
+            </a>
         </div>
     </div>
 
