--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
                     <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
                 </div>
             </a>
+        
+            <a href="output/www.atob.com/html/index.html" class="domain-card">
+                <h3><i class="fas fa-globe"></i> www.atob.com</h3>
+                <p>Fleet fuel card and logistics solutions - comprehensive business services analysis</p>
+                <div class="quick-links">
+                    <span class="link-item"><i class="fas fa-tachometer-alt"></i> Dashboard</span>
+                    <span class="link-item"><i class="fas fa-universal-access"></i> Accessibility</span>
+                    <span class="link-item"><i class="fas fa-search"></i> SEO Analysis</span>
+                    <span class="link-item"><i class="fas fa-tasks"></i> QA Tests</span>
+                    <span class="link-item"><i class="fas fa-user-check"></i> UX Analysis</span>
+                    <span class="link-item"><i class="fas fa-images"></i> Screenshots</span>
+                </div>
+            </a>
         </div>
     </div>
 
