--- a/output/coursera.org/html/index.html
+++ b/output/coursera.org/html/index.html
@@ -666,8 +666,8 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Coursera Analysis</h1>
-            <p>Comprehensive website analysis dashboard with SEO, accessibility, and performance insights</p>
+            <h1><i class="fas fa-chart-line"></i> Coursera</h1>
+            <p></p>
         </div>
 
         <div class="nav-tabs">
