--- a/output/coursera.org/html/qa-tests.html
+++ b/output/coursera.org/html/qa-tests.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Coursera Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Coursera</h1>
             <p>Comprehensive QA test suite with automated browser testing scenarios</p>
         </div>
 
