--- a/output/coursera.org/html/screenshots.html
+++ b/output/coursera.org/html/screenshots.html
@@ -726,7 +726,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Coursera Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Coursera</h1>
             <p>Visual gallery of all website pages captured during analysis</p>
         </div>
 
