--- a/output/coursera.org/html/seo-analysis.html
+++ b/output/coursera.org/html/seo-analysis.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Coursera Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Coursera</h1>
             <p>Search engine optimization analysis with detailed insights and recommendations</p>
         </div>
 
