--- a/output/www.target.com/html/accessibility.html
+++ b/output/www.target.com/html/accessibility.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less. Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less.</h1>
             <p>WCAG 2.1 AA compliance analysis with detailed accessibility insights</p>
         </div>
 
