--- a/output/www.target.com/html/index.html
+++ b/output/www.target.com/html/index.html
@@ -666,8 +666,8 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less. Analysis</h1>
-            <p>Comprehensive website analysis dashboard with SEO, accessibility, and performance insights</p>
+            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less.</h1>
+            <p></p>
         </div>
 
         <div class="nav-tabs">
