--- a/output/www.target.com/html/qa-tests.html
+++ b/output/www.target.com/html/qa-tests.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less. Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less.</h1>
             <p>Comprehensive QA test suite with automated browser testing scenarios</p>
         </div>
 
