--- a/output/www.target.com/html/screenshots.html
+++ b/output/www.target.com/html/screenshots.html
@@ -726,7 +726,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less. Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less.</h1>
             <p>Visual gallery of all website pages captured during analysis</p>
         </div>
 
