--- a/output/www.target.com/html/seo-analysis.html
+++ b/output/www.target.com/html/seo-analysis.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less. Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Target : Expect More. Pay Less.</h1>
             <p>Search engine optimization analysis with detailed insights and recommendations</p>
         </div>
 
