--- a/output/stage.bluebirds.com/html/screenshots.html
+++ b/output/stage.bluebirds.com/html/screenshots.html
@@ -726,7 +726,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Bluebirds Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Bluebirds</h1>
             <p>Visual gallery of all website pages captured during analysis</p>
         </div>
 
