--- a/output/stage.bluebirds.com/html/seo-analysis.html
+++ b/output/stage.bluebirds.com/html/seo-analysis.html
@@ -666,7 +666,7 @@ body {
         </div>
 
         <div class="header">
-            <h1><i class="fas fa-chart-line"></i> Bluebirds Analysis</h1>
+            <h1><i class="fas fa-chart-line"></i> Bluebirds</h1>
             <p>Search engine optimization analysis with detailed insights and recommendations</p>
         </div>
 
