--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-spider"></i> Neeva Crawler</h1>
-            <p>Website Analysis Reports - Comprehensive QA testing, accessibility audits, SEO analysis, and UX recommendations</p>
+            <h1><i class="fas fa-spider"></i> Neeva Explorer</h1>
         </div>
 
         <div class="domain-grid">
