--- a/output/console.zerodha.com/html/accessibility.html
+++ b/output/console.zerodha.com/html/accessibility.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accessibility Analysis - Dashboard / Console</title>
+    <title>Accessibility Analysis - Zerodha Console</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -657,7 +657,7 @@ body {
     <div class="container">
         <!-- Navigation Header -->
         <div class="nav-header">
-            <h1><i class="fas fa-chart-line"></i> Dashboard / Console</h1>
+            <h1><img src="assets/zerodha_logo.svg" alt="Zerodha" style="height: 24px; width: auto; margin-right: 8px; vertical-align: middle;"> Zerodha Console</h1>
             <a href="../../../index.html" class="home-button">
                 <i class="fas fa-home"></i> All Reports
             </a>
