--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         
             <a href="output/console.zerodha.com/html/index.html" class="domain-card">
                 <h3><i class="fas fa-globe"></i> console.zerodha.com</h3>
-                <p>Website analysis for Dashboard / Console - comprehensive QA testing and recommendations</p>
+                <p>Website analysis for Zerodha Console - comprehensive QA testing and recommendations</p>
                 <div class="quick-links">
                     <span class="link-item"><i class="fas fa-tachometer-alt"></i> Dashboard</span>
                     <span class="link-item"><i class="fas fa-universal-access"></i> Accessibility</span>
