Update zoho logo

--- a/output/zoho.com/html/screenshots.html
+++ b/output/zoho.com/html/screenshots.html
@@ -717,7 +717,7 @@ body {
     <div class="container">
         <!-- Navigation Header -->
         <div class="nav-header">
-            <h1><i class="fas fa-chart-line"></i> Zoho</h1>
+            <h1><img src="assets/logo.png" alt="Zoho" style="height: 32px; vertical-align: middle; background: white; padding: 4px; border-radius: 4px;"> Zoho</h1>
             <a href="../../../index.html" class="home-button">
                 <i class="fas fa-home"></i> All Reports
             </a>
